# aiagentkit

./: .dockerignore  .gitignore  CHANGELOG.md  CONTRIBUTING.md  DOCS.md  Dockerfile  Dockerfile.worker  LICENSE  Makefile  README.md  SECURITY.md  STANDARDS.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  publish.yml
Desktop/ai_resume_maker/: .gitignore  README.md  mdx-components.tsx  next.config.ts  package-lock.json  package.json  schema.sql
Desktop/ai_resume_maker/docs/plans/: 2026-03-08-homepage-redesign-seo-design.md  2026-03-08-homepage-redesign-seo.md
Desktop/ai_resume_maker/public/: debug-pdf.html
Desktop/ai_resume_maker/scripts/migration/: stage-status.mjs
Desktop/ai_resume_maker/src/: proxy.ts
Desktop/ai_resume_maker/src/app/: globals.css  layout.tsx  page.tsx  robots.ts  sitemap.ts
Desktop/ai_resume_maker/src/app/admin/: layout.tsx  page.tsx
Desktop/ai_resume_maker/src/app/blog/: layout.tsx  page.tsx
Desktop/ai_resume_maker/src/app/builder/: page.tsx
Desktop/ai_resume_maker/src/app/convert/: page.tsx
Desktop/ai_resume_maker/src/app/dashboard/: DashboardClient.tsx  page.tsx
Desktop/ai_resume_maker/src/app/llm.txt/: route.ts
Desktop/ai_resume_maker/src/app/preview/: page.tsx
Desktop/ai_resume_maker/src/app/templates/: page.tsx
Desktop/ai_resume_maker/src/components/admin/: AdminGuard.tsx  AdminSidebar.tsx  StatsCard.tsx
Desktop/ai_resume_maker/src/components/dashboard/: ImportResumeModal.tsx
Desktop/ai_resume_maker/src/components/forms/: AchievementsForm.tsx  CertificationsForm.tsx  EducationForm.tsx  ExperienceForm.tsx  FormWrapper.tsx  HeaderForm.tsx  JSONImport.tsx  ProjectsForm.tsx  SkillsForm.tsx
Desktop/ai_resume_maker/src/components/resume/: ResumePrintLayout.tsx
Desktop/ai_resume_maker/src/components/ui/: Button.tsx  EnhanceButton.tsx  ErrorBoundary.tsx  Input.tsx  JobMatcher.tsx  Logo.tsx  Navbar.tsx  QuickPeek.tsx  ResumeScore.tsx  ScaleWrapper.tsx  Textarea.tsx
Desktop/ai_resume_maker/src/content/blog/: accountant-resume.mdx  ats-resume-guide.mdx  best-free-resume-builder.mdx  customer-service-resume.mdx  data-analyst-resume.mdx  free-canva-resume-alternative.mdx  free-indeed-resume-builder-alternative.mdx  free-resume-io-alternative.mdx  free-zety-alternative.mdx  graphic-designer-resume.mdx  how-to-write-a-cover-letter.mdx  how-to-write-a-resume.mdx  marketing-resume.mdx  nursing-resume.mdx  project-manager-resume.mdx  resume-format-guide.mdx  resume-no-experience.mdx  resume-skills-guide.mdx  resume-summary-examples.mdx  (+3 more)
Desktop/ai_resume_maker/src/lib/: blog.ts  env.ts
Desktop/ai_resume_maker/src/styles/: fonts-base64.css  print.css
Desktop/ai_resume_maker/src/types/: dom-to-image-more.d.ts
Desktop/ai_resume_maker/supabase/migrations/: admin_tables.sql
agent_platform/: main_worker.py
agent_platform/control_plane/: agents.py  billing.py  orgs.py  policy.py  server.py
agent_platform/execution/: llm.py  remote_services.py  runtime.py  tools.py  worker.py
agent_platform/execution/providers/: __init__.py  claude.py  openai.py
agent_platform/gateway/: audit.py  mcp_client.py  mcp_proxy.py  remote_services.py  token_exchange.py
agent_platform/proto/: agent_platform_pb2.py
agent_platform/shared/: exceptions.py  models.py  postgres_store.py  store.py  validation.py
cli/: agentctl.py
examples/: quickstart.py
examples/opa_policies/: rate_limit.rego  time_of_day.rego  tool_parameters.rego
helm/agent-platform/: Chart.yaml  values.yaml
helm/agent-platform/templates/: control-plane.yaml  opa.yaml  worker.yaml
migrations/: 001_initial.sql
platform/: main_control.py  main_worker.py
platform/control_plane/: agents.py  billing.py  orgs.py  policy.py  server.py
platform/execution/: memory.py  runtime.py  tools.py  worker.py
platform/gateway/: audit.py  mcp_proxy.py  token_exchange.py
platform/proto/: agent_platform_pb2_grpc.py
platform/shared/: logging.py
proto/: agent_platform.proto
sdk/agent_platform_sdk/: client.py
sdks/go/: go.mod
sdks/go/agentplatform/: client.go
sdks/python/agent_platform_sdk/: __init__.py  agents.py  budget.py  client.py  orgs.py  policy.py
sdks/rust/: Cargo.toml  build.rs
sdks/rust/src/: client.rs  error.rs  lib.rs  models.rs
tests/: conftest.py  test_agents.py  test_audit.py  test_billing.py  test_error_paths.py  test_mcp_proxy.py  test_orgs.py  test_policy.py  test_runtime.py  test_token_exchange.py  test_tools.py  test_validation.py
(+67 files in other folders)
