[project]
name = "agent-platform"
version = "0.1.0"
description = "IAM for AI Agents — identity, policy, budget, and audit governance control plane"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Agent Platform Team"}
]

dependencies = [
    "grpcio>=1.60.0",
    "grpcio-tools>=1.60.0",
    "protobuf>=4.25.0",
    "structlog>=24.1.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
auth0 = ["auth0-python>=4.0.0"]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "grpcio-testing>=1.60.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[tool.setuptools.packages.find]
include = ["agent_platform*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
