[project]
name = "agent-platform"
version = "0.2.0"
description = "IAM for AI Agents — identity, policy, budget, and audit governance control plane"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Agent Platform Team"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]

dependencies = [
    "grpcio>=1.60.0",
    "grpcio-tools>=1.60.0",
    "protobuf>=4.25.0",
    "structlog>=24.1.0",
    "httpx>=0.27.0",
    "PyJWT>=2.8.0",
    "cryptography>=42.0.0",
    "click>=8.1.0",
]

[project.optional-dependencies]
auth0 = ["auth0-python>=4.0.0"]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "grpcio-testing>=1.60.0",
    "mypy>=1.8.0",
]

[project.scripts]
agentctl = "cli.agentctl:cli"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[tool.setuptools.packages.find]
include = ["agent_platform*", "cli*"]

[tool.setuptools.package-data]
agent_platform = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
