[package]
name = "agent-platform-sdk"
version = "0.1.0"
edition = "2021"
description = "Rust SDK for the Agent Platform — IAM for AI Agents"
license = "MIT"

[dependencies]
tonic = "0.12"
prost = "0.13"
prost-types = "0.13"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"

[build-dependencies]
tonic-build = "0.12"
